--- a/admin.html
+++ b/admin.html
@@ -4,15 +4,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Panel - Task Management</title>
+  <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <!-- Link to custom styles -->
   <link href="assets/css/styles.css" rel="stylesheet" />
 </head>
-<body class="p-6 font-sans" onload="initializeAdminPage()">
+<body class="p-6 font-sans">
+  <!-- Header Section -->
+  <header>
+    <!-- Application Logo -->
+    <img id="appLogo" src="assets/image/logo.png" alt="Company Logo" class="logo">
+    <!-- Organization Information -->
+    <div id="orgInfo" class="org-info">
+      <!-- Org Name and Tagline will be populated by JS -->
+    </div>
+    <!-- Theme Toggle Button -->
+    <button id="themeToggleBtn" class="theme-toggle-btn">
+      <i class="fas fa-adjust"></i> Toggle Theme
+    </button>
+  </header>
+
   <div class="container">
     <h1 class="text-2xl font-bold mb-4">Admin Portal - Welcome, <span id="userName"></span> <i class="fas fa-user-cog fa-icon"></i></h1>
 
     <hr class="my-8">
 
+    <!-- Add Employee Section -->
     <h1 class="text-2xl font-bold mb-4">Add Employee <i class="fas fa-user-plus fa-icon"></i></h1>
     <form id="employeeForm" class="form-section">
       <div class="form-group">
@@ -30,6 +47,7 @@
       <button type="submit" class="btn btn-primary"><i class="fas fa-plus fa-icon"></i> Add Employee</button>
     </form>
 
+    <!-- Employee List Section -->
     <h2 class="text-xl font-semibold mb-2">Employee List <i class="fas fa-users fa-icon"></i></h2>
     <table class="data-table">
       <thead>
@@ -46,6 +64,7 @@
 
     <hr class="my-8">
 
+    <!-- Add Task Section -->
     <h1 class="text-2xl font-bold mb-4">Add Task <i class="fas fa-plus-square fa-icon"></i></h1>
     <form id="taskForm" class="form-section">
       <div class="form-group">
@@ -59,6 +78,7 @@
       <button type="submit" class="btn btn-success"><i class="fas fa-plus fa-icon"></i> Add Task</button>
     </form>
 
+    <!-- Task List Section -->
     <h2 class="text-xl font-semibold mb-2">Task List <i class="fas fa-tasks fa-icon"></i></h2>
     <table class="data-table">
       <thead>
@@ -75,6 +95,7 @@
 
     <hr class="my-8">
 
+    <!-- Assign Task Section -->
     <h1 class="text-2xl font-bold mb-4">Assign Task <i class="fas fa-hand-holding-box fa-icon"></i></h1>
     <form id="assignForm" class="form-section">
       <div class="form-group">
@@ -103,6 +124,7 @@
 
     <hr class="my-8">
 
+    <!-- Global Performance Stats Section -->
     <h1 class="text-2xl font-bold mb-4">Global Performance Stats <i class="fas fa-globe fa-icon"></i></h1>
     <div id="globalStatsBox" class="summary-box">
       <p><strong>Total Tasks (All Time):</strong> <span id="globalTotal"></span> <i class="fas fa-layer-group"></i></p>
@@ -111,6 +133,7 @@
       <p class="status-pending"><strong>Pending (All Time):</strong> <span id="globalPending"></span> <i class="fas fa-clock"></i></p>
     </div>
 
+    <!-- Filter Performance Statistics Section -->
     <h2 class="text-xl font-semibold mb-2">Filter Performance Statistics <i class="fas fa-filter fa-icon"></i></h2>
     <div class="form-section">
         <div class="form-group">
@@ -141,6 +164,7 @@
         <button id="clearFilterBtn" class="btn btn-danger"><i class="fas fa-redo fa-icon"></i> Clear Filters</button>
     </div>
 
+    <!-- Filtered Performance Data Table -->
     <h2 class="text-xl font-semibold mb-2">Filtered Performance Data <i class="fas fa-table fa-icon"></i></h2>
     <table class="data-table">
         <thead>
@@ -163,9 +187,12 @@
 
   </div>
 
-  <!-- Loader Overlay -->
+  <!-- Loader Overlay (Progress Bar) -->
   <div id="loader-overlay" class="loader-overlay">
-      <div class="spinner"></div>
+      <div class="loader-bar-container">
+          <div id="loaderProgressBar" class="loader-progress-bar"></div>
+      </div>
+      <div id="loaderProgressText" class="loader-text">Loading...</div>
   </div>
 
   <!-- Toast Container -->
@@ -182,8 +209,27 @@
       </div>
   </div>
 
-  <!-- Link to admin.js -->
-  <script src="js/admin.js"></script>
-  <script src="js/ui-helpers.js"></script> <!-- New helper script for UI elements -->
+  <!-- Footer Section -->
+  <footer>
+    <div id="contactInfo">
+      <!-- Mobile and Address will be populated by JS -->
+    </div>
+  </footer>
+
+  <!-- Link to helper scripts and admin-specific script -->
+  <script src="js/ui-helpers.js"></script> <!-- Helper script for UI elements, themes, and customization -->
+  <script src="js/admin.js"></script> <!-- Admin-specific logic -->
+  <script>
+    // Global initialization function for all pages
+    async function initializePage() {
+      await fetchCustomizationData(); // Load customization data
+      applyCustomizationData(); // Apply customization data to the DOM
+      loadThemePreference(); // Load and apply theme preference
+      // Initialize theme toggle button
+      document.getElementById('themeToggleBtn').addEventListener('click', toggleTheme);
+      initializeAdminPage(); // Call the page-specific initialization
+    }
+    window.onload = initializePage; // Call the global initializer on page load
+  </script>
 </body>
 </html>
